# cycledit

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: dump-fixture.rs
issues/: 05-glob-wildcard-question-mark.md  06-eyre-wrap-err-idiom.md  07-insta-snapshot-coverage.md  08-gix-test-repo-creation.md  09-reject-empty-date-blocks.md  10-schedule-chunk-alignment.md  11-walk-tree-blobs-visitor-pattern.md  12-list-files-head-only-optimization.md  13-git-minor-improvements.md  14-stable-backward-fill-scheduling.md
issues/closed/: 00-implementation-plan.md  01-stderr-dead-code.md  02-division-by-zero-cycle-days.md  03-init-git-per-file-commits.md  04-bare-repo-discovery.md  06-eyre-wrap-err-idiom.md  13-git-minor-improvements.md  14-stable-backward-fill-scheduling.md
src/: fixture.rs  git.rs  lib.rs  schedule.rs
tests/: list_tests.rs  now_check_tests.rs  schedule_tests.rs
tests/common/: mod.rs
tests/integration/: anchor_tests.rs  common.rs  dump_fixture_tests.rs  help_text_tests.rs  list_tests.rs  main.rs  now_check_tests.rs  schedule_tests.rs
tests/integration/common/: git_ops_blocks.rs  path_and_parent.rs
tests/integration/snapshots/: integration__dump_fixture_tests__metrics_baseline.snap  integration__help_text_tests__main.snap  integration__help_text_tests__subcommand_check.snap  integration__help_text_tests__subcommand_list.snap  integration__help_text_tests__subcommand_now.snap  integration__help_text_tests__subcommand_schedule.snap  integration__list_tests__list_error_not_in_git_repo.snap  integration__schedule_tests__schedule_error_chunk_exceeds_cycle.snap  integration__schedule_tests__schedule_error_invalid_chunk.snap  integration__schedule_tests__schedule_error_large_chunk.snap  integration__schedule_tests__schedule_error_large_cycle.snap  integration__schedule_tests__schedule_error_zero_chunk.snap  (+2 more)
