[package]
name = "cycledit"
version = "0.1.0"
authors = ["Daniel Lambert <danjl1100@gmail.com>"]
license = "MIT"
edition = "2024"

exclude = ["issues"]

[dependencies]
clap = { version = "4", features = ["derive"] }
glob-match = "0.2"
jiff = "0.2"
gix = { version = "0.70", default-features = false, features = ["revision", "index"] }
eyre = { version = "0.6", default-features = false, features = ["auto-install"]} # exclude: track-caller

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = "3"

# NOTE: The lint settings are the personal preferences of the project architect.
[lints.clippy]
# teach me
pedantic = { level = "warn", priority = -1 }
# except this confusing pattern
bool_to_int_with_if = { level = "allow", priority = 1 }
# `#[expect(...)]` annotations are permitted in the project, but require justification inline
allow_attributes_without_reason = { level = "warn" }

# no unwrap
unwrap_used = "warn"
# no panic
panic = "warn"

# report errors instead of hidden panics (where relevant, e.g. main user-facing code)
arithmetic_side_effects = "warn"

[lints.rust]
# docs!
missing_docs = "warn"
# no unsafe
unsafe_code = "forbid"

[lints.rustdoc]
# docs!
broken_intra_doc_links = "warn"
